--- a/style.css
+++ b/style.css
@@ -2,24 +2,31 @@ body{
 	background-image: url("assets/doodles.png");
 }
 
+img{
+	width: 100%;
+	height: auto;
+}
+
 .main-content{
 	width: 80%;
-	background-color: rgba(255,255,255,.7);
+	background-color: rgba(255,255,255,0);
 }
 
 .list-group-item{
 	border: none;
+	background-color: rgba(255,255,255,0);
 }
 
 .inner-content{
 	width: 80%
 	border: none;
+	background-color: rgba(255,255,255,.3);
 }
 
 #answer-container{
 	border: none;
 	border-width: 0px;
-	background-color: rgba(255,255,255,.7);
+	background-color: rgba(255,255,255,.3);
 }
 
 #answer-box{
@@ -30,13 +37,20 @@ body{
 
 #title-box{
 	width: 80%;
+	background-color: rgba(255,255,255,.3);
+}
+
+#title-container{
+	background-color: rgba(255,255,255,.3);
 }
 
 #start-button{
 	margin: auto;
+	background-color: rgba(255,255,255,1);
 }
 
 .no-border{
 	border:none;
+		background-color: rgba(255,255,255,.3);
 }
 
